--- a/index.html
+++ b/index.html
@@ -25,49 +25,42 @@
         <img src="./assets/images/nallely_logo.png" width="24" height="24" viewBox="0 0 24 24" fill="none">
         <span> allely Alcaraz</span>
       </a>
-      <a class="py-2 d-none d-md-inline-block" href="#">Home</a>
+      <!-- <a class="py-2 d-none d-md-inline-block" href="#">Home</a> -->
 
     </div>
   </nav>
 
-  <div class=" name-div position-relative overflow-hidden p-3 p-md-5 text-center">
-    <div class="col-md-4 mx-auto ">
-      <!--Picture will go here-->
-      <img class="avatar" src="./assets/images/nallely.jpg">
-    </div>
-    <div class="col-md-6  mx-auto">
-      <h1 class="display-4">Nallely Alcaraz</h1>
-      <p class="lead ">Web Developer</p>
+  <div class="name-div position-relative overflow-hidden text-center">
+
+    <div class="overlay p-3 p-md-5 ">
+      <div class="col-md-4 mx-auto ">
+
+        <img class="avatar" src="./assets/images/nallely.jpg">
+
+      </div>
+      <div class="col-md-6  mx-auto">
+        <h1 class="display-4">Nallely Alcaraz</h1>
+        <p class="lead">Web Developer</p>
+      </div>
     </div>
   </div>
 
-  <!-- <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center ">
+  <div class="about-me position-relative overflow-hidden p-3 p-md-5  text-center ">
 
-    <div class="col-md-5 p-lg-5 mx-auto my-5">
-      <p>Resume possibly?</p>
+    <div class="col-md-8 p-lg-5 mx-auto my-3">
     </div>
-  </div> -->
-  <!-- 
-    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-      <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
-        <div class="my-3 py-3">
-          <h2 class="display-5">Another headline</h2>
-          <p class="lead">And an even wittier subheading.</p>
-        </div>
-        <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-      </div>
-      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-        <div class="my-3 p-3">
-          <h2 class="display-5">Another headline</h2>
-          <p class="lead">And an even wittier subheading.</p>
-        </div>
-        <div class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-      </div>
-    </div> -->
+  </div>
+  <div class="resume position-relative overflow-hidden p-3 p-md-5  text-center ">
+
+    <div class="col-md-12 p-lg-5 mx-auto my-3">
+    </div>
+  </div>
 
 
 
-  <footer class="container py-5">
+
+
+  <footer class="container py-2">
     <div class="row">
       <div class="col-12 col-md">
         <img src="./assets/images/nallely_logo.png" width="24" height="24" viewBox="0 0 24 24" fill="none">
