feat: contact form

--- a/index.html
+++ b/index.html
@@ -4,3 +4,12 @@ title: Home
 permalink: index.html
 ---
 
+{% include nallely.html %}
+<!--ABOUT ME-->
+{% include about-me.html %}
+<!--EXPERIENCE-->
+{% include experience.html %}
+<!--EDUCATION-->
+{% include education.html %}
+<!--SKILLS-->
+{% include skills.html %}
